Rh Project: test and fix all endpoints for new version.
