# rh-project/controllers/project.js
@@ -1,13 +1,18 @@
-import { ProjectService } from '../services/project.js';
 import { conf } from '../conf.js';
 import { getOptionsFromParamsAndOData, _HttpError, getUuidFromRequest } from 'http-util';
 import { checkParameter, filterVisualItemsByAliasName } from 'rf-util';
 import { loc, defaultLoc } from 'rf-locale';
+import { Controller } from 'rh-controller';
+import { dependency } from 'rf-dependency';
 
-const projectService = ProjectService.singleton();
+export class ProjectController extends Controller {
+  constructor() {
+    super();
 
-export class ProjectController {
-  static async checkDataForCompanyId(req, data) {
+    this.service = dependency.get('projectService');
+  }
+
+  async checkDataForCompanyId(req, data) {
     if (!conf.filters?.getCurrentCompanyId) {
       return;
     }
@@ -36,25 +41,26 @@ export class ProjectController {
     return data.companyId;
   }
 
-  static async checkUuid(req) {
+  async checkUuid(req) {
     const loc = req.loc ?? defaultLoc;
     const uuid = await getUuidFromRequest(req);
-    const project = await projectService.getForUuid(uuid, { skipNoRowsError: true, loc });
+    const project = await this.service.getForUuid(uuid, { skipNoRowsError: true, loc });
     if (!project) {
       throw new _HttpError(loc._cf('project', 'The project with UUID %s does not exists.'), 404, uuid);
     }
 
-    const companyId = await ProjectController.checkDataForCompanyId(req, { companyId: project.companyId });
+    const companyId = await this.checkDataForCompanyId(req, { companyId: project.companyId });
 
     return { uuid, companyId };
   }
 
-  static async post(req, res) {
+  postPermission = 'project.create';
+  async post(req, res) {
     const loc = req.loc ?? defaultLoc;
     checkParameter(req?.body, { name: loc._cf('project', 'Name'), title: loc._cf('project', 'Title') });
         
     const data = { ...req.body };
-    await ProjectController.checkDataForCompanyId(req, data);
+    await this.checkDataForCompanyId(req, data);
     if (!data.owner && !data.ownerId) {
       data.ownerId = req.user.id;
       if (!data.ownerId) {
@@ -62,18 +68,13 @@ export class ProjectController {
       }
     }
 
-    await projectService.create(data);
+    await this.service.create(data);
 
     res.status(204).send();
   }
 
-  static async get(req, res) {
-    if ('$grid' in req.query) {
-      return ProjectController.getGrid(req, res);
-    } else if ('$form' in req.query) {
-      return ProjectController.getForm(req, res);
-    }
-
+  getPermission = 'project.get';
+  async getData(req, res) {
     const definitions = { uuid: 'uuid', name: 'string' };
     let options = {
       view: true,
@@ -98,7 +99,7 @@ export class ProjectController {
 
     await conf.global.eventBus?.$emit('Project.response.getting', options);
 
-    const result = await projectService.getListAndCount(options);
+    const result = await this.service.getListAndCount(options);
 
     if (conf.global.models.Company) {
       result.rows = result.rows.map(row => {
@@ -113,7 +114,7 @@ export class ProjectController {
     res.status(200).send(result);
   }
 
-  static async getGrid(req, res) {
+  async getGrid(req, res) {
     checkParameter(req.query, '$grid');
 
     const actions = [];
@@ -176,7 +177,7 @@ export class ProjectController {
     res.status(200).send(grid);
   }
 
-  static async getForm(req, res) {
+  async getForm(req, res) {
     checkParameter(req.query, '$form');
 
     const loc = req.loc ?? defaultLoc;
@@ -259,40 +260,12 @@ export class ProjectController {
     res.status(200).send(form);
   }
 
-  static async delete(req, res) {
-    const { uuid } = await this.checkUuid(req);
+  deleteForUuidPermission = 'project.delete';
+  enableForUuidPermission = 'project.edit';
+  disableForUuidPermission = 'project.edit';
 
-    const rowsDeleted = await projectService.deleteForUuid(uuid);
-    if (!rowsDeleted) {
-      throw new _HttpError(loc._cf('project', 'Project with UUID %s does not exists.'), 403, uuid);
-    }
-
-    res.sendStatus(204);
-  }
-
-  static async enablePost(req, res) {
-    const { uuid } = await this.checkUuid(req);
-
-    const rowsUpdated = await projectService.enableForUuid(uuid);
-    if (!rowsUpdated) {
-      throw new _HttpError(loc._cf('project', 'Project with UUID %s does not exists.'), 403, uuid);
-    }
-
-    res.sendStatus(204);
-  }
-
-  static async disablePost(req, res) {
-    const { uuid } = await this.checkUuid(req);
-
-    const rowsUpdated = await projectService.disableForUuid(uuid);
-    if (!rowsUpdated) {
-      throw new _HttpError(loc._cf('project', 'Project with UUID %s does not exists.'), 403, uuid);
-    }
-
-    res.sendStatus(204);
-  }
-
-  static async patch(req, res) {
+  'patchPermission /:uuid' = 'project.edit';
+  async 'patch /:uuid'(req, res) {
     const { uuid, companyId } = await this.checkUuid(req);
 
     const data = { ...req.body, uuid: undefined };
@@ -302,7 +275,7 @@ export class ProjectController {
       where.companyId = companyId;
     }
 
-    const rowsUpdated = await projectService.updateFor(data, where);
+    const rowsUpdated = await this.service.updateFor(data, where);
     if (!rowsUpdated) {
       throw new _HttpError(loc._cf('project', 'Project with UUID %s does not exists.'), 403, uuid);
     }
@@ -310,7 +283,8 @@ export class ProjectController {
     res.sendStatus(204);
   }
 
-  static async getCompany(req, res) {
+  'getPermission /company' = 'project.edit';
+  async 'get /company'(req, res) {
     const definitions = { uuid: 'uuid', name: 'string' };
     let options = { view: true, limit: 10, offset: 0 };
 
